add Local files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
         <body>
         <h1>&reg;Bazinis HTML</h1>
-            
+           <p>Lokaliai sukurtas paragrafas</p> 
         </body>
 </html> 
