--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <body>
         <h1>&reg;Bazinis HTML</h1>
            <p>Lokaliai sukurtas paragrafas</p> 
+            <p>Pataisytas paragrafas</p>
         </body>
 </html> 
