--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h1>&reg;Bazinis HTML</h1>
            <p>Lokaliai sukurtas paragrafas</p> 
             <p>Pataisytas paragrafas</p>
+			<p>Tekstas sukurtas paragrafas</p>
         </body>
 </html> 
