--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     </head>
         <body>
         <h1>&reg;Bazinis HTML</h1>
-           <p>Lokaliai sukurtas paragrafas</p> 
-            <p>Pataisytas paragrafas</p>
-			<p>Tekstas sukurtas paragrafas</p>
-            <p>Blogas nuotolinis paragrafas</p>
+            <p>test</p>
         </body>
 </html> 
